Add computerPlay() function for computer to select choice

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <script>
-            
+            const choice = ['Rock', 'Paper', 'Scissors'];
+
+            function computerPlay() {
+                return choice[Math.floor(Math.random() * choice.length)]
+            }
         </script>
     </body>
 </html>
