--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
     </head>
     <body>
         <script>
-            const choice = ['Rock', 'Paper', 'Scissors'];
+            const choice = ['rock', 'paper', 'scissors'];
 
             function computerPlay() {
+
                 return choice[Math.floor(Math.random() * choice.length)]
+                
             }
+
+            function playRound(playerSelection, computerSelection) {
+
+                playerSelection = playerSelection.toLowerCase();
+
+                if (playerSelection === computerSelection) {
+                    return 'It\'s a draw!';
+                } else if ((playerSelection === 'rock' && computerSelection === 'scissors') || (playerSelection === 'paper' && computerSelection === 'rock') || (playerSelection === 'scissors' && computerSelection === 'paper')) {
+                    return 'You Win! ' + playerSelection + ' beats ' + computerSelection;
+                } else {
+                    return 'You Lose! ' + computerSelection + ' beats ' + playerSelection;
+                }
+
+            }
+
+            const playerSelection = 'RocK';
+            console.log(playerSelection);
+            const computerSelection = computerPlay();
+            console.log(computerSelection);
+            console.log(playRound(playerSelection, computerSelection));
         </script>
     </body>
 </html>
