--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <body>
         <script>
             const choice = ['rock', 'paper', 'scissors'];
+            let playerScore = 0;
+            let computerScore = 0;
 
             function computerPlay() {
 
-                return choice[Math.floor(Math.random() * choice.length)]
-                
+                return choice[Math.floor(Math.random() * choice.length)];
+
             }
 
             function playRound(playerSelection, computerSelection) {
@@ -19,20 +21,48 @@
                 playerSelection = playerSelection.toLowerCase();
 
                 if (playerSelection === computerSelection) {
-                    return 'It\'s a draw!';
+                    console.log('It\'s a draw!');
                 } else if ((playerSelection === 'rock' && computerSelection === 'scissors') || (playerSelection === 'paper' && computerSelection === 'rock') || (playerSelection === 'scissors' && computerSelection === 'paper')) {
-                    return 'You Win! ' + playerSelection + ' beats ' + computerSelection;
+                    playerScore++;
+                    console.log('You Win! ' + playerSelection + ' beats ' + computerSelection);
                 } else {
-                    return 'You Lose! ' + computerSelection + ' beats ' + playerSelection;
+                    computerScore++;
+                    console.log('You Lose! ' + computerSelection + ' beats ' + playerSelection);
                 }
 
             }
 
-            const playerSelection = 'RocK';
-            console.log(playerSelection);
-            const computerSelection = computerPlay();
-            console.log(computerSelection);
-            console.log(playRound(playerSelection, computerSelection));
+            function game() {
+
+                while (playerScore < 3 && computerScore < 3) {
+
+                    let playerSelection = prompt('Rock, Paper, or Scissors?');
+                    console.log(playerSelection);
+                    let computerSelection = computerPlay();
+                    console.log(computerSelection);
+
+                    playRound(playerSelection, computerSelection);
+
+                    console.log("Player Score: " + playerScore);
+                    console.log("Computer Score: " + computerScore);
+
+                }
+
+                if (playerScore > computerScore) {
+
+                    return "You Win!";
+
+                } else {
+
+                    return "Too bad... You Lose!";
+
+                }
+
+                // Reset score
+                playerScore = 0;
+                computerScore = 0;
+
+            }
         </script>
     </body>
 </html>
